# service_healthcheck

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.optimized  README.md  pyproject.toml
.github/workflows/: ci.yml
src/service_healthcheck/: __init__.py  __main__.py  cli.py  healthcheck.py  logging_config.py  models.py
tests/: __init__.py  conftest.py  test_cli.py  test_exit_codes.py  test_healthcheck.py
